--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -88,6 +88,62 @@
                         <label><input type="checkbox" name="Co-op Education" data-code="(COE)">Co-op Education</label>
                         <label><input type="checkbox" name="Communication" data-code="(SPE)">Communication</label>
                         <label><input type="checkbox" name="Communication Sciences & Disorders" data-code="(CSD)">Communication Sciences & Disorders</label>
+                        <label><input type="checkbox" name="Community and Family Health" data-code="(CFH)">Community and Family Health</label>
+                        <label><input type="checkbox" name="Community Experiential Learning">Community Experiential Learnin</label>
+                        <label><input type="checkbox" name="Counselor Education">Counselor Education</label>
+                        <label><input type="checkbox" name="Criminology">Criminology</label>
+                        <label><input type="checkbox" name="Curriculum">Curriculum </label>
+                        <label><input type="checkbox" name="Dance">Dance</label>
+                        <label><input type="checkbox" name="Dean's Office">Dean's Office</label>
+                        <label><input type="checkbox" name="Early Childhood Education">Early Childhood Education</label>
+                        <label><input type="checkbox" name="Economics">Economics</label>
+                        <label><input type="checkbox" name="Education - General ">Education - General </label>
+                        <label><input type="checkbox" name="Educational Leadership ">Educational Leadership </label>
+                        <label><input type="checkbox" name="Educational Psychology">Educational Psychology</label>
+                        <label><input type="checkbox" name="Electrical Engineering">Electrical Engineering</label>
+                        <label><input type="checkbox" name="Elementary Education">Elementary Education </label>
+                        <label><input type="checkbox" name="Engineering Computer Science">Engineering Computer Science</label>
+                        <label><input type="checkbox" name="English">English</label>
+                        <label><input type="checkbox" name="English Ed & Speech Comm. Ed">English Ed & Speech Comm. Ed</label>
+                        <label><input type="checkbox" name="Entrepreneurship">Entrepreneurship</label>
+                        <label><input type="checkbox" name="Environ. & Occupational Health">Environ. & Occupational Health</label>
+                        <label><input type="checkbox" name="Environmental Science & Policy Program">Environmental Science & Policy Program</label>
+                        <label><input type="checkbox" name="Epidemiology and Biostatistics">Epidemiology and Biostatistics </label>
+                        <label><input type="checkbox" name="Exceptional Child Education">Exceptional Child Education</label>
+                        <label><input type="checkbox" name="Finance">Finance </label>
+                        <label><input type="checkbox" name="FMHI ">FMHI </label>
+                        <label><input type="checkbox" name="Foreign Language Education ">Foreign Language Education </label>
+                        <label><input type="checkbox" name="Foundations">Foundations</label>
+                        <label><input type="checkbox" name="Geography">Geography</label>
+                        <label><input type="checkbox" name="Geology">Geology</label>
+                        <label><input type="checkbox" name="Geosciences, School of">Geosciences, School of</label>
+                        <label><input type="checkbox" name="Global Health">Global Health</label>
+                        <label><input type="checkbox" name="Government & Intl Affairs">Government & Intl Affairs</label>
+                        <label><input type="checkbox" name="Graduate School Department">Graduate School Department</label>
+                        <label><input type="checkbox" name="Health Policy and Management">Health Policy and Management</label>
+                        <label><input type="checkbox" name="Higher Ed/Community College Ed ">Higher Ed/Community College Ed </label>
+                        <label><input type="checkbox" name="History">History</label>
+                        <label><input type="checkbox" name="Honors Program">Honors Program</label>
+                        <label><input type="checkbox" name="Hotel & Restaurant Management">Hotel & Restaurant Management</label>
+                        <label><input type="checkbox" name="Humanities & Cultural Studies">Humanities & Cultural Studies</label>
+                        <label><input type="checkbox" name="Humanities">Humanities</label>
+                        <label><input type="checkbox" name="Industrial Systems">Industrial Systems </label>
+                        <label><input type="checkbox" name="Information Sys & Decision Sci">Information Sys & Decision Sci </label>
+                        <label><input type="checkbox" name="Information Technology">Information Technology</label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
                         <label><input type="checkbox" name="#"></label>
                         <label><input type="checkbox" name="#"></label>
                         <label><input type="checkbox" name="#"></label>
