--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -130,32 +130,56 @@
                         <label><input type="checkbox" name="Industrial Systems">Industrial Systems </label>
                         <label><input type="checkbox" name="Information Sys & Decision Sci">Information Sys & Decision Sci </label>
                         <label><input type="checkbox" name="Information Technology">Information Technology</label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="Instructional Technology">Instructional Technology</label>
+                        <label><input type="checkbox" name="Interdisciplinary Arts & Scien ">Interdisciplinary Arts & Scien </label>
+                        <label><input type="checkbox" name="Interdisciplinary Social Sci">Interdisciplinary Social Sci</label>
+                        <label><input type="checkbox" name="Interdisciplinary Studies ">Interdisciplinary Studies </label>
+                        <label><input type="checkbox" name="International Studies">International Studies </label>
+                        <label><input type="checkbox" name="Latin Am Studies/Caribbean Ctr ">Latin Am Studies/Caribbean Ctr </label>
+                        <label><input type="checkbox" name="Leadership Studies">Leadership Studies</label>
+                        <label><input type="checkbox" name="Library and Information Sci.">Library and Information Sci. </label>
+                        <label><input type="checkbox" name="Management and Organization ">Management and Organization </label>
+                        <label><input type="checkbox" name="Marine Science">Marine Science</label>
+                        <label><input type="checkbox" name="Marketing">Marketing </label>
+                        <label><input type="checkbox" name="Mass Communication">Mass Communication</label>
+                        <label><input type="checkbox" name="Mathematics and Statistics ">Mathematics and Statistics </label>
+                        <label><input type="checkbox" name="Mathematics Education">Mathematics Education</label>
+                        <label><input type="checkbox" name="Measurement-Research">Measurement-Research</label>
+                        <label><input type="checkbox" name="Mechanical Engineering">Mechanical Engineering</label>
+                        <label><input type="checkbox" name="Medical Sciences">Medical Sciences</label>
+                        <label><input type="checkbox" name="Mental Health Law & Policy">Mental Health Law & Policy</label>
+                        <label><input type="checkbox" name="Music">Music</label>
+                        <label><input type="checkbox" name="Music Education ">Music Education </label>
+                        <label><input type="checkbox" name="Naval (ROTC)">Naval (ROTC)</label>
+                        <label><input type="checkbox" name="Nursing (NUR)">Nursing (NUR)</label>
+                        <label><input type="checkbox" name="Philosophy">Philosophy </label>
+                        <label><input type="checkbox" name="Physical Education (Elective)">Physical Education (Elective)</label>
+                        <label><input type="checkbox" name="Physical Education for Teacher">Physical Education for Teacher </label>
+                        <label><input type="checkbox" name="Physical Therapy">Physical Therapy</label>
+                        <label><input type="checkbox" name="Physics">Physics </label>
+                        <label><input type="checkbox" name="Political Science">Political Science</label>
+                        <label><input type="checkbox" name="Psychology">Psychology</label>
+                        <label><input type="checkbox" name="Public Administration ">Public Administration </label>
+                        <label><input type="checkbox" name="Public Health">Public Health</label>
+                        <label><input type="checkbox" name="Reading & Learning Strategies ">Reading & Learning Strategies </label>
+                        <label><input type="checkbox" name="Rehab & Mental Hlth Counseling">Rehab & Mental Hlth Counseling</label>
+                        <label><input type="checkbox" name="Religious Studies">Religious Studies</label>
+                        <label><input type="checkbox" name="School of Aging Studies">School of Aging Studies</label>
+                        <label><input type="checkbox" name="School of Information">School of Information</label>
+                        <label><input type="checkbox" name="School of Public Affairs">School of Public Affairs</label>
+                        <label><input type="checkbox" name="School Psychology">School Psychology </label>
+                        <label><input type="checkbox" name="Science Education ">Science Education </label>
+                        <label><input type="checkbox" name="Secondary Education, General">Secondary Education, General</label>
+                        <label><input type="checkbox" name="Social Foundations ">Social Foundations </label>
+                        <label><input type="checkbox" name="Social Science Education">Social Science Education</label>
+                        <label><input type="checkbox" name="Social Work ">Social Work </label>
+                        <label><input type="checkbox" name="Sociology">Sociology</label>
+                        <label><input type="checkbox" name="Student Affairs - General">Student Affairs - General</label>
+                        <label><input type="checkbox" name="Student Leadership">Student Leadership</label>
+                        <label><input type="checkbox" name="Theater & Dance ">Theater & Dance </label>
+                        <label><input type="checkbox" name="Women's and Gender Studies">Women's and Gender Studies</label>
+                        <label><input type="checkbox" name="World Languages ">World Languages </label>
+
       </fieldset>
     </section>
     <section><header><h2>Section Four: Courses</h2></header></section>
