--- a/tasks/form1/test2.html
+++ b/tasks/form1/test2.html
@@ -3,6 +3,22 @@
 <head>
   <title>Test Form One</title>
   <meta charset="UTF-8">
+    <style>
+  body, select {
+    font-size: 14px;
+  }
+  form {
+    margin: 5px;
+  }
+  p {
+    color: red;
+    margin: 5px;
+  }
+  b {
+    color: blue;
+  }
+  </style>
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 <body>
 <nav>
