--- a/tasks/form1/test2.html
+++ b/tasks/form1/test2.html
@@ -32,6 +32,9 @@
     <li><a href="http://www.cynthiasays.com/">CynthiaSays.com</a></li>
   </ul>
 </nav>
+<aside>
+<p><b>Results:</b> <span id="results"></span></p>
+</aside>
   <article itemscope itemtype="http://schema.org/Place">
     <header itemprop="mainEntityOfPage"><h1>Form One Test One</h1></header>
     <section>
