--- a/tasks/form1/test3.html
+++ b/tasks/form1/test3.html
@@ -42,10 +42,10 @@
       <form>
         <fieldset>
                 <legend>Which Institution Do You Wish to Attend?</legend>
-                        <label><input type="checkbox" name="USF">USF</label>
-                        <label><input type="checkbox" name="USFSP">USFSP</label>
-                        <label><input type="checkbox" name="USFSM">USFSM</label>
-                        <label><input type="checkbox" name="Other">Other</label>
+                        <label for="USF"><input type="checkbox" name="USF">USF</label>
+                        <label for="USFSP"><input type="checkbox" name="USFSP">USFSP</label>
+                        <label for="USFSM"><input type="checkbox" name="USFSM">USFSM</label>
+                        <label for="Other"><input type="checkbox" name="Other">Other</label>
         </fieldset>
         </form>
     </section>
