--- a/tasks/form1/test3.html
+++ b/tasks/form1/test3.html
@@ -43,9 +43,9 @@
         <fieldset>
                 <legend>Which Institution Do You Wish to Attend?</legend>
                         <label for="USF"><input type="checkbox" name="USF" value="USF">USF</label>
-                        <label for="USFSP"><input type="checkbox" name="USFSP">USFSP</label>
-                        <label for="USFSM"><input type="checkbox" name="USFSM">USFSM</label>
-                        <label for="Other"><input type="checkbox" name="Other">Other</label>
+                        <label for="USFSP"><input type="checkbox" name="USFSP" value="USFSP">USFSP</label>
+                        <label for="USFSM"><input type="checkbox" name="USFSM" value="USFSM">USFSM</label>
+                        <label for="Other"><input type="checkbox" name="Other" value="Other">Other</label>
         </fieldset>
         </form>
     </section>
