--- a/tasks/form1/test3.html
+++ b/tasks/form1/test3.html
@@ -42,10 +42,10 @@
       <form>
         <fieldset>
                 <legend>Which Institution Do You Wish to Attend?</legend>
-                        <input type="checkbox" name="USF" value="USF"><label for="USF" id="USF">USF</label>
-                        <input type="checkbox" name="USFSP" value="USFSP"><label for="USFSP" id="USFSP">USFSP</label>
-                        <input type="checkbox" name="USFSM" value="USFSM"><label for="USFSM" id="USFSM">USFSM</label>
-                        <input type="checkbox" name="Other" value="Other"><label for="Other" id="Other">Other</label>
+                        <input type="checkbox" name="USF" value="USF" id="USF"><label for="USF">USF</label>
+                        <input type="checkbox" name="USFSP" value="USFSP" id="USFSP"><label for="USFSP">USFSP</label>
+                        <input type="checkbox" name="USFSM" value="USFSM" id="USFSM"><label for="USFSM">USFSM</label>
+                        <input type="checkbox" name="Other" value="Other" id="Other"><label for="Other">Other</label>
         </fieldset>
         </form>
     </section>
