--- a/tasks/form1/test3.html
+++ b/tasks/form1/test3.html
@@ -206,10 +206,12 @@
     </section>
     <section><header><h2>Section Four: Courses</h2></header></section>
   </article>
+  <aside><h6>Ampersands possibly throw errors in accessiblity testing</h6></aside>
   <footer>
     <h4>References</h4>
     <ul>
       <li><a href="http://www.html5rocks.com/en/tutorials/forms/constraintvalidation/">Form Constraint Validation</a></li>
+      <li><a href="http://api.jquery.com/serializeArray/">JQuery serializeArray</a></li>
     </ul>
   </footer>
   <script>
