--- a/tasks/form1/test3.html
+++ b/tasks/form1/test3.html
@@ -53,8 +53,8 @@
       <header><h2>Section Two: Colleges</h2></header>
                  <fieldset>
                 <legend>Which College Do You Wish to Attend?</legend>
-                        <input type="checkbox" name="Business" class="USF USFSP USFSM (BM) (BP) (BA)" id="C1"><label for="C1">Business</label>
-                        <input type="checkbox" name="Technology and Innovation" id="C2"><label for="C2">Technology and Innovation</label>
+                        <input type="checkbox" name="Business" value="Business" class="USF USFSP USFSM (BM) (BP) (BA)" id="C1"><label for="C1">Business</label>
+                        <input type="checkbox" name="Technology and Innovation" value="Technology and Innovation" id="C2"><label for="C2">Technology and Innovation</label>
                         <label><input type="checkbox" name="Arts and Sciences">Arts & Sciences</label>
                         <label><input type="checkbox" name="Education">Education</label>
                         <label><input type="checkbox" name="Human and Social Sciences">Human and Social Sciences</label>
