--- a/tasks/form1/test3.html
+++ b/tasks/form1/test3.html
@@ -51,6 +51,7 @@
     </section>
     <section>
       <header><h2>Section Two: Colleges</h2></header>
+            <form>
                  <fieldset>
                 <legend>Which College Do You Wish to Attend?</legend>
                         <input type="checkbox" name="Business" value="Business" class="USF USFSP USFSM (BM) (BP) (BA)" id="C1"><label for="C1">Business</label>
@@ -74,7 +75,8 @@
                         <label><input type="checkbox" name="Marine Science">Marine Science</label>
                         <label><input type="checkbox" name="Undergraduate Studies">Undergraduate Studies</label>
 
-        </fieldset>
+           </fieldset>
+        </form>
     </section>
     <section>
       <header><h2>Section Three: Programs</h2></header>
