--- a/tasks/form1/test3.html
+++ b/tasks/form1/test3.html
@@ -42,10 +42,10 @@
       <form>
         <fieldset>
                 <legend>Which Institution Do You Wish to Attend?</legend>
-                        <input type="checkbox" name="USF" value="USF" id="USF"><label for="USF">USF</label>
-                        <input type="checkbox" name="USFSP" value="USFSP" id="USFSP"><label for="USFSP">USFSP</label>
-                        <input type="checkbox" name="USFSM" value="USFSM" id="USFSM"><label for="USFSM">USFSM</label>
-                        <input type="checkbox" name="Other" value="Other" id="Other"><label for="Other">Other</label>
+                        <input type="checkbox" name="USF" value="USF" id="I1"><label for="I1">USF</label>
+                        <input type="checkbox" name="USFSP" value="USFSP" id="I2"><label for="I2">USFSP</label>
+                        <input type="checkbox" name="USFSM" value="USFSM" id="I3"><label for="I3">USFSM</label>
+                        <input type="checkbox" name="Other" value="Other" id="I4"><label for="I4">Other</label>
         </fieldset>
         </form>
     </section>
