--- a/tasks/form1/test3.html
+++ b/tasks/form1/test3.html
@@ -56,24 +56,24 @@
                 <legend>Which College Do You Wish to Attend?</legend>
                         <input type="checkbox" name="Business" value="Business" class="USF USFSP USFSM (BM) (BP) (BA)" id="C1"><label for="C1">Business</label>
                         <input type="checkbox" name="Technology and Innovation" value="Technology and Innovation" id="C2"><label for="C2">Technology and Innovation</label>
-                        <label><input type="checkbox" name="Arts and Sciences">Arts & Sciences</label>
-                        <label><input type="checkbox" name="Education">Education</label>
-                        <label><input type="checkbox" name="Human and Social Sciences">Human and Social Sciences</label>
-                        <label><input type="checkbox" name="Behavioral and Community Sciences ">Behavioral and Community Sciences </label>
-                        <label><input type="checkbox" name="Undergraduate Studies">Undergraduate Studies</label>
-                        <label><input type="checkbox" name="Architecture & Community Design">Architecture & Community Design</label>
-                        <label><input type="checkbox" name="College of The Arts">College of The Arts</label>
-                        <label><input type="checkbox" name="Undergraduate Studies">Undergraduate Studies</label>
-                        <label><input type="checkbox" name="Medicine ">Medicine</label>
-                        <label><input type="checkbox" name="Engineering">Engineering</label>
-                        <label><input type="checkbox" name="FMHI: de la Parte Florida Mental Health Institute">FMHI: de la Parte Florida Mental Health Institute</label>
-                        <label><input type="checkbox" name="Human and Social Sciences">Human and Social Sciences</label>
-                        <label><input type="checkbox" name="Global Sustainability">Global Sustainability</label>
-                        <label><input type="checkbox" name="Public Health">Public Health</label>
-                        <label><input type="checkbox" name="Graduate School">Graduate School</label>
-                        <label><input type="checkbox" name="Hotel & Tech Leadership">Hotel & Tech Leadership</label>
-                        <label><input type="checkbox" name="Marine Science">Marine Science</label>
-                        <label><input type="checkbox" name="Undergraduate Studies">Undergraduate Studies</label>
+                        <input type="checkbox" name="Arts and Sciences" id="C3"><label for="C3">Arts & Sciences</label>
+                        <input type="checkbox" name="Education" id="C4"><label for="C4">Education</label>
+                        <input type="checkbox" name="Human and Social Sciences" id="C5"><label for="C5">Human and Social Sciences</label>
+                        <input type="checkbox" name="Behavioral and Community Sciences" id="C6"><label for="C6">Behavioral and Community Sciences </label>
+                        <input type="checkbox" name="Undergraduate Studies" id="C7"><label for="C7">Undergraduate Studies</label>
+                        <input type="checkbox" name="Architecture & Community Design" id="C8"><label for="C8">Architecture & Community Design</label>
+                        <input type="checkbox" name="College of The Arts" id="C9"><label for="C9">College of The Arts</label>
+                        <input type="checkbox" name="Undergraduate Studies" id="C10"><label for="C10">Undergraduate Studies</label>
+                        <input type="checkbox" name="Medicine" id="C11"><label for="C11">Medicine</label>
+                        <input type="checkbox" name="Engineering" id="C12"><label label for="C12">Engineering</label>
+                        <input type="checkbox" name="FMHI: de la Parte Florida Mental Health Institute" id="C13"><label for="C13">FMHI: de la Parte Florida Mental Health Institute</label>
+                        <input type="checkbox" name="Human and Social Sciences" id="C14"><label for="C14">Human and Social Sciences</label>
+                        <input type="checkbox" name="Global Sustainability" id="C15"><label for="C15">Global Sustainability</label>
+                        <input type="checkbox" name="Public Health" id="C16"><label for="C16">Public Health</label>
+                        <input type="checkbox" name="Graduate School"id="C17"><label for="C17">Graduate School</label>
+                        <input type="checkbox" name="Hotel & Tech Leadership" id="C18"><label for="C18">Hotel & Tech Leadership</label>
+                        <input type="checkbox" name="Marine Science" id="19"><label for="19">Marine Science</label>
+                        <input type="checkbox" name="Undergraduate Studies" id="20"><label for="20">Undergraduate Studies</label>
 
            </fieldset>
         </form>
