--- a/tasks/form1/test3.html
+++ b/tasks/form1/test3.html
@@ -80,6 +80,7 @@
     </section>
     <section>
       <header><h2>Section Three: Programs</h2></header>
+      <form>
       <fieldset>
                 <legend>Which Program Do You Wish to Attend?</legend>
                         <label><input type="checkbox" name="Accounting" data-code="(ACC)">Accounting</label>
@@ -204,7 +205,8 @@
                         <label><input type="checkbox" name="Women's and Gender Studies" data-code="(WST)">Women's and Gender Studies</label>
                         <label><input type="checkbox" name="World Languages" data-code="(WLE)">World Languages </label>
 
-      </fieldset>
+        </fieldset>
+      </form>
     </section>
     <section><header><h2>Section Four: Courses</h2></header></section>
   </article>
