--- a/tasks/form1/test3.html
+++ b/tasks/form1/test3.html
@@ -65,7 +65,7 @@
                         <input type="checkbox" name="College of The Arts" id="C9"><label for="C9">College of The Arts</label>
                         <input type="checkbox" name="Undergraduate Studies" id="C10"><label for="C10">Undergraduate Studies</label>
                         <input type="checkbox" name="Medicine" id="C11"><label for="C11">Medicine</label>
-                        <input type="checkbox" name="Engineering" id="C12"><label label for="C12">Engineering</label>
+                        <input type="checkbox" name="Engineering" id="C12"><label for="C12">Engineering</label>
                         <input type="checkbox" name="FMHI: de la Parte Florida Mental Health Institute" id="C13"><label for="C13">FMHI: de la Parte Florida Mental Health Institute</label>
                         <input type="checkbox" name="Human and Social Sciences" id="C14"><label for="C14">Human and Social Sciences</label>
                         <input type="checkbox" name="Global Sustainability" id="C15"><label for="C15">Global Sustainability</label>
