--- a/tasks/form1/test3.html
+++ b/tasks/form1/test3.html
@@ -83,30 +83,30 @@
       <form>
       <fieldset>
                 <legend>Which Program Do You Wish to Attend?</legend>
-                        <label><input type="checkbox" name="Accounting" data-code="(ACC)">Accounting</label>
-                        <label><input type="checkbox" name="Administration/Supervision" data-code="(EDB)">Administration/Supervision</label>
-                        <label><input type="checkbox" name="Adult/Vocational/Hum Res Div" data-code="(EDV)">Adult/Vocational/Hum Res Div</label>
-                        <label><input type="checkbox" name="Africana Studies" data-code="(AFA)">Africana Studies</label>
-                        <label><input type="checkbox" name="Aging Studies" data-code="(AGE)">Aging Studies </label>
-                        <label><input type="checkbox" name="Air Force (ROTC)" data-code="(AFR)">Air Force (ROTC)</label>
-                        <label><input type="checkbox" name="American Studies" data-code="(AMS)">American Studies</label>
-                        <label><input type="checkbox" name="Anthropology" data-code="(ANT)">Anthropology</label>
-                        <label><input type="checkbox" name="Architecture" data-code="(ARC)">Architecture</label>
-                        <label><input type="checkbox" name="Army (ROTC)" data-code="(MIS)">Army (ROTC)</label>
-                        <label><input type="checkbox" name="Art" data-code="(ART)">Art</label>
-                        <label><input type="checkbox" name="Art Education" data-code="(EDA)">Art Education</label>
-                        <label><input type="checkbox" name="Astronomy" data-code="(AST)"></label>
-                        <label><input type="checkbox" name="Athletic Training" data-code="(ATH)">Athletic Training</label>
-                        <label><input type="checkbox" name="Basic & Interdisciplinary Eng" data-code="(EGB)">Basic & Interdisciplinary Eng</label>
-                        <label><input type="checkbox" name="Biology" data-code="(BIO)">Biology</label>
-                        <label><input type="checkbox" name="Biology - Integrative" data-code="(BIN)">Biology - Integrative </label>
-                        <label><input type="checkbox" name="Biology-Cell, Micro, Molecular" data-code="(BCM)">Biology-Cell, Micro, Molecular </label>
-                        <label><input type="checkbox" name="Biology-Cell, Molecular & Micr" data-code="(BCM)">Biology-Cell, Molecular & Micr </label>
-                        <label><input type="checkbox" name="Business Administration" data-code="(MBA)">Business Administration</label>
-                        <label><input type="checkbox" name="Chemical & Biomedical Eng" data-code="(ECH)">Chemical & Biomedical Eng </label>
-                        <label><input type="checkbox" name="Chemistry" data-code="(CHM)">Chemistry</label>
-                        <label><input type="checkbox" name="Child & Family Studies" data-code="(CFS)"></label>
-                        <label><input type="checkbox" name="Childhood Ed & Literacy Stdies" data-code="(EDR)">Childhood Ed & Literacy Stdies</label>
+                        <input type="checkbox" name="Accounting" data-code="(ACC)" id="P1"><label for="P1">Accounting</label>
+                        <input type="checkbox" name="Administration/Supervision" data-code="(EDB)" id="P2"><label for="P2">Administration/Supervision</label>
+                        <input type="checkbox" name="Adult/Vocational/Hum Res Div" data-code="(EDV)" id="P3"><label for="P3">Adult/Vocational/Hum Res Div</label>
+                        <input type="checkbox" name="Africana Studies" data-code="(AFA)" id="P4"><label for="P4">Africana Studies</label>
+                        <input type="checkbox" name="Aging Studies" data-code="(AGE)" id="P5"><label for="P5">Aging Studies</label>
+                        <input type="checkbox" name="Air Force (ROTC)" data-code="(AFR)" id="P6"><label for="P6">Air Force (ROTC)</label>
+                        <input type="checkbox" name="American Studies" data-code="(AMS)" id="P7"><label for="P7">American Studies</label>
+                        <input type="checkbox" name="Anthropology" data-code="(ANT)" id="P8"><label for="P8">Anthropology</label>
+                        <input type="checkbox" name="Architecture" data-code="(ARC)" id="P9"><label for="P9">Architecture</label>
+                        <input type="checkbox" name="Army (ROTC)" data-code="(MIS)" id="P10"><label for="P10">Army (ROTC)</label>
+                        <input type="checkbox" name="Art" data-code="(ART)" id="P11"><label for="P11">Art</label>
+                        <input type="checkbox" name="Art Education" data-code="(EDA)" id="P12"><label for="P12">Art Education</label>
+                        <input type="checkbox" name="Astronomy" data-code="(AST)" id="P13"><label for="P13">Astronomy</label>
+                        <input type="checkbox" name="Athletic Training" data-code="(ATH)" id="P14"><label for="P14">Athletic Training</label>
+                        <input type="checkbox" name="Basic & Interdisciplinary Eng" data-code="(EGB)" id="P15"><label for="P15">Basic & Interdisciplinary Eng</label>
+                        <input type="checkbox" name="Biology" data-code="(BIO)" id="P16"><label for="P16">Biology</label>
+                        <input type="checkbox" name="Biology - Integrative" data-code="(BIN)" id="P17"><label for="P17">Biology - Integrative </label>
+                        <input type="checkbox" name="Biology-Cell, Micro, Molecular" data-code="(BCM)" id="P18"><label for="P18">Biology-Cell, Micro, Molecular </label>
+                        <input type="checkbox" name="Biology-Cell, Molecular & Micr" data-code="(BCM)" id="P19"><label for="P19">Biology-Cell, Molecular & Micr </label>
+                        <input type="checkbox" name="Business Administration" data-code="(MBA)" id="P20"><label for="P20">Business Administration</label>
+                        <input type="checkbox" name="Chemical & Biomedical Eng" data-code="(ECH)" id="P21"><label for="P21">Chemical & Biomedical Eng </label>
+                        <input type="checkbox" name="Chemistry" data-code="(CHM)" id="P22"><label for="P22">Chemistry</label>
+                        <input type="checkbox" name="Child & Family Studies" data-code="(CFS)" id="P23"><label for="P23">Child and Family Studies</label>
+                        <input type="checkbox" name="Childhood Ed & Literacy Stdies" data-code="(EDR)"><label id=>Childhood Ed & Literacy Stdies</label>
                         <label><input type="checkbox" name="Civil & Environmental Eng" data-code="(EGX)">Civil & Environmental Eng</label>
                         <label><input type="checkbox" name="Classics (Greek and Latin)" data-code="(CLA)">Classics (Greek and Latin) </label>
                         <label><input type="checkbox" name="Co-op Education" data-code="(COE)">Co-op Education</label>
